--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Chunshu Li"
-  avatar           : "profile.png"
+  avatar           : "profile-chunshuli.png"
   bio              : "Undergraduate at Southeast University. Majoring in AI."
   location         : "Nanjing, China"
   employer         :
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : " https://orcid.org/0000-0002-0705-7304"
+  orcid            : "https://orcid.org/0000-0002-0705-7304"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
