--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Chunshu Li"
-  avatar           : "profile-chunshuli.png"
+  avatar           : "profile-chunshuli.jpg"
   bio              : "Undergraduate at Southeast University. Majoring in AI."
   location         : "Nanjing, China"
   employer         :
